--- a/Python/BinaryTree/BT-All Kind of Node Depths.ipynb
+++ b/Python/BinaryTree/BT-All Kind of Node Depths.ipynb
@@ -40,16 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the class of the input binary tree.\n",
     "class BinaryTree:\n",
-    "    def __init__(self, value):\n",
-    "        self.value = value\n",
-    "        self.left = None\n",
-    "        self.right = None\n",
+    "    def __init__(self, val, left = None, right =  None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "        \n",
     "def allKindsOfNodeDepths(root, depth = 0):\n",
     "    # Write your code here.\n",
@@ -63,6 +71,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = BinaryTree(1, BinaryTree(2, BinaryTree(4, BinaryTree(8), BinaryTree(9)), BinaryTree(5)), BinaryTree(3, BinaryTree(6), BinaryTree(7)))\n",
+    "allKindsOfNodeDepths(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -71,7 +100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -85,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
