--- a/Python/BinaryTree/BT-Binary Tree Right Side View.ipynb
+++ b/Python/BinaryTree/BT-Binary Tree Right Side View.ipynb
@@ -44,17 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definition for a binary tree node.\n",
-    "# class TreeNode:\n",
-    "#     def __init__(self, val=0, left=None, right=None):\n",
-    "#         self.val = val\n",
-    "#         self.left = left\n",
-    "#         self.right = right\n",
-    "\n",
+    "class TreeNode:\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
     "def rightSideView(root):\n",
     "    if not root:\n",
     "        return []\n",
@@ -70,11 +78,105 @@
     "        res.append(temp[-1])\n",
     "    return res"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 4]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = TreeNode(1, TreeNode(2, None, TreeNode(5)), TreeNode(3, None, TreeNode(4)))\n",
+    "rightSideView(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No need of temp array\n",
+    "from collections import deque\n",
+    "def rightSideView1(root):\n",
+    "    if not root:\n",
+    "        return []\n",
+    "    res = []\n",
+    "    q = deque([root])\n",
+    "    while q:\n",
+    "        node = None\n",
+    "        for _ in range(len(q)):\n",
+    "            node = q.popleft()\n",
+    "            if node.left: q.append(node.left)\n",
+    "            if node.right: q.append(node.right)\n",
+    "        if node:\n",
+    "            res.append(node.val)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 4]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = TreeNode(1, TreeNode(2, None, TreeNode(5)), TreeNode(3, None, TreeNode(4)))\n",
+    "rightSideView1(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 4, 6]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = TreeNode(1, TreeNode(2, None, TreeNode(5, TreeNode(6))), TreeNode(3, None, TreeNode(4)))\n",
+    "rightSideView1(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -88,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
