--- a/Python/DynamicProgramming/DP-Hard-Best Time to Buy and Sell Stock IV.ipynb
+++ b/Python/DynamicProgramming/DP-Hard-Best Time to Buy and Sell Stock IV.ipynb
@@ -47,7 +47,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
@@ -197,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
